<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:minWidth="@dimen/min_dialog_width"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/settings_auto_examine_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="@string/auto_examine" />

        <CheckBox
            android:id="@+id/settings_auto_save_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="@string/auto_save" />

        <CheckBox
            android:id="@+id/settings_auto_log_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="@string/auto_log" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"/>
            <CheckBox
                android:id="@+id/settings_filter_empty_auto_log_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/sub_box"
                android:layout_weight="1"
                android:text="@string/filter_auto_log" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/settings_click_anywhere_examines_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="@string/click_anywhere" />

        <CheckBox
            android:id="@+id/settings_show_examine_button_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="@string/show_examine_button" />

        <EditText
            android:id="@+id/settings_default_file_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="@string/default_file_name"
            android:hint="@string/default_file_name_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settings_accept_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/fab_margin"
                android:layout_weight="1"
                android:text="@string/accept" />

            <Button
                android:id="@+id/settings_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/fab_margin"
                android:layout_weight="1"
                android:text="@string/cancel" />

        </LinearLayout>

        <Button
            android:id="@+id/settings_reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/reset_settings" />
    </LinearLayout>
</ScrollView>