<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ateg.intentexperiments.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="70"
        android:showAsAction="never"
        android:title="@string/action_export_db" />
    <item
        android:id="@+id/save_to_file"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom"
        android:title="@string/save_to_file" />
    <item
        android:id="@+id/save_to_file_as"
        android:icon="@android:drawable/ic_menu_set_as"
        android:showAsAction="ifRoom"
        android:title="@string/save_to_file_as" />
</menu>
